h1 integrado en index.html

--- a/css/style.css
+++ b/css/style.css
@@ -47,4 +47,8 @@ RRSS: https://twitter.com/nachosan80es
   -webkit-transition-duration: 1s;
           transition-duration: 1s;
 }
+
+h1 {
+  text-align: center;
+}
 /*# sourceMappingURL=style.css.map */
