--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,18 @@ RRSS: https://twitter.com/nachosan80es
           transition-duration: 0.8s;
 }
 
+.nav-item:focus {
+  color: red;
+  margin: 0px;
+  border-bottom: 4px solid red;
+}
+
+.active {
+  color: red;
+  margin: 0px;
+  border-bottom: 4px solid red;
+}
+
 /*Inventamos unos separadores*/
 .separator {
   margin: 10px;
