--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,14 @@ RRSS: https://twitter.com/nachosan80es
           transition-duration: 0.8s;
 }
 
+/*Agregamos el focus*/
 .nav-item:focus {
   color: red;
   margin: 0px;
   border-bottom: 4px solid red;
 }
 
+/*Agregamos los enlaces activos*/
 .active {
   color: red;
   margin: 0px;
